@@ -9,6 +9,7 @@ Version 1.3.13+svn:
 
   * Multiplayer
     * Revised maps: Den of Onis, Weldyn Channel.
+    * MP campaign gold carry over works properly now.
 
   * User interface
     * The apple key works as shortcut modifier again.
