@@ -25,6 +25,7 @@ Version 1.3.13+svn:
      OOS errors in campaigns (bug #10624)
    * :droid can now use the additional parameters on & off to enable/disable
      the AI status of a side instead of toggle it (FR #9676)
+   * fixed the MP campaign gold carry over (bug #10677)
  * sound:
    * timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds (fr #10559)
